[project]
name = "comfyui-video-downloader"
version = "0.1.0"
description = "ComfyUI custom node for downloading videos/audio via yt-dlp, with optional cookie-based auth for premium accounts."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "klim314", email = "klim314@gmail.com" }
]
dependencies = [
    "yt-dlp>=2025.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nodes"]
